# Otonom-Robotlar-i-in-GridFormer-Model-Entegreli-Perception-Mod-l-YOLOv8-Nesne-Tespiti

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  FINAL_DEMO_RESULTS.md  FINAL_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SPRINT_ROADMAP.md  demo_gridformer_visual.py  demo_without_docker.py  docker-compose-simple.yml  docker-compose.yml  env.py  export_gridformer_onnx.py  gridformer.py  gridformer_yolo_pipeline.py  load_trained_model.py  performance_analysis.md  pipeline_validation_report.json  pytest.ini  requirements.txt  run_ros2_simulation.py  run_test.py  setup_dev_env.ps1  sprint_summary.md  test_full_pipeline.py  test_gpu_optimization.py  test_gridformer.py  test_models_standalone.py  test_optimized_models.py  test_yolov8.py  train_gridformer.py  train_yolo.py  update_readme.py
.github/workflows/: ci.yml
docs/: staj_defteri_taslak.md
launch/: warehouse_demo.launch.py
mlops/: mlflow_utils.py
navigation/: CMakeLists.txt  nav2_params.yaml  package.xml  rl_agent_node.py
navigation/src/: bbox2costmap_node.cpp
perception/: CMakeLists.txt  gridformer_node.py  package.xml  yolov8_node.py
scripts/: check_gpu_providers.py  create_demo_gif.py  demo_recorder.py  download_models.py  export_models.py  monitor_training.py  onnx_to_trt.sh  optimize_models.py  present_demo.py  present_weather_demo.py  quick_pipeline_test.py  quick_setup.py  run_presentation.ps1  run_quick_test.ps1  run_quick_test.sh  run_ros2_demo.ps1  run_ros2_demo.sh  run_tests.py  simple_monitor.py  test_pipeline.py  use_pretrained_models.py  validate_setup.py
tests/: conftest.py  test_env_reset.py  test_gridformer_infer.py  test_ros_integration.py
