<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>1.0.0</version>
  <description>GridFormer Robot Perception Package</description>
  
  <maintainer email="dev@gridformer-robot.com">GridFormer Team</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/your-user/gridformer-robot</url>
  <url type="bugtracker">https://github.com/your-user/gridformer-robot/issues</url>
  <url type="repository">https://github.com/your-user/gridformer-robot</url>
  
  <author email="dev@gridformer-robot.com">GridFormer Team</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Python dependencies (handled via requirements.txt) -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 